--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <section class="home">
-            <h1>Il pleut des nénuphars sur des aéroports deserts !</h1>
+            <h1>Il pleut des nénuphars sur des aéroports desertés !</h1>
         </section>
 
     </main>
