--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <main>
-        <section class="home">
+        <section class="home2">
             <h1>Il pleut des nénuphars sur des aéroports desertés !</h1>
         </section>
 
